logs/easyshop.shop.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/easyshop'...
Listing './lib/python3.5/site-packages/easyshop/shop'...
Listing './lib/python3.5/site-packages/easyshop/shop/adapters'...
Listing './lib/python3.5/site-packages/easyshop/shop/browser'...
Listing './lib/python3.5/site-packages/easyshop/shop/browser/admin'...
Compiling './lib/python3.5/site-packages/easyshop/shop/browser/admin/test_environment.py'...
***   File "./lib/python3.5/site-packages/easyshop/shop/browser/admin/test_environment.py", line 99
    print product
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/easyshop/shop/content'...
Listing './lib/python3.5/site-packages/easyshop/shop/docs'...
Listing './lib/python3.5/site-packages/easyshop/shop/migrations'...
Listing './lib/python3.5/site-packages/easyshop/shop/portlets'...
Listing './lib/python3.5/site-packages/easyshop/shop/profiles'...
Listing './lib/python3.5/site-packages/easyshop/shop/profiles/default'...
Listing './lib/python3.5/site-packages/easyshop/shop/profiles/default/types'...
Listing './lib/python3.5/site-packages/easyshop/shop/profiles/default/workflows'...
Listing './lib/python3.5/site-packages/easyshop/shop/profiles/default/workflows/easyshop_containers_workflow'...
Listing './lib/python3.5/site-packages/easyshop/shop/profiles/default/workflows/easyshop_default_workflow'...
Listing './lib/python3.5/site-packages/easyshop/shop/profiles/default/workflows/easyshop_shop_workflow'...
Listing './lib/python3.5/site-packages/easyshop/shop/skins'...
Listing './lib/python3.5/site-packages/easyshop/shop/skins/easyshop_images'...
Listing './lib/python3.5/site-packages/easyshop/shop/skins/easyshop_macros'...
Listing './lib/python3.5/site-packages/easyshop/shop/skins/easyshop_misc'...
Listing './lib/python3.5/site-packages/easyshop/shop/skins/easyshop_overwrites'...
Compiling './lib/python3.5/site-packages/easyshop/shop/skins/easyshop_overwrites/referencebrowser_startupDirectory.py'...
***   File "./lib/python3.5/site-packages/easyshop/shop/skins/easyshop_overwrites/referencebrowser_startupDirectory.py", line 110
    return filterPortalFactory(dopath)
    ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/easyshop/shop/skins/easyshop_portlets'...
Listing './lib/python3.5/site-packages/easyshop/shop/skins/easyshop_templates'...
Listing './lib/python3.5/site-packages/easyshop/shop/utilities'...
Listing './lib/python3.5/site-packages/easyshop.shop-0.1a1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
